--- a/vue/public/index.html
+++ b/vue/public/index.html
@@ -8,6 +8,7 @@
     <title>final-vue-capstone-seed</title>
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet' />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
      <style>
         html,body
           {
